--- a/index.css
+++ b/index.css
@@ -11,11 +11,13 @@
     font-family:Arial, Helvetica, sans-serif;
     /*animation: fade 320ms ease both;*/
 }
-h1 {
+h1, h2 {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 20px;
     padding-right: 20px;
-    font-size: 30px;
+}
+h1 {
+  font-size: 30px;
 }
 .container {
     margin-top: 30px;
