--- a/index.css
+++ b/index.css
@@ -28,9 +28,9 @@ h1 {
     /*box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);*/
     border: 5px solid #ccc;
     border-radius: 10px;
-    width: 55%;
+    width: fit-content;
     max-width: 900px;
-    min-width: 600px;
+    min-width: 340px;
 }
 .ekarivi {
     display: flex;
