--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
     font-family:Arial, Helvetica, sans-serif;
     /*animation: fade 320ms ease both;*/
 }
-h1, h2 {
+h1, h4 {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-left: 20px;
     padding-right: 20px;
@@ -49,7 +49,7 @@ h1 {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
 }
-p, h3 {
+body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
@@ -175,6 +175,7 @@ input[type="submit"], #edellinenbutton, #seuraavabutton {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 10px;
 }
 #paatelmateksti {
     margin-top: 0px;
