--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ h1 {
     /*box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);*/
     border: 5px solid #ccc;
     border-radius: 10px;
-    width: fit-content;
+    width: 100%;
     max-width: 900px;
     min-width: 340px;
 }
